Refactor: Migrate database from SQLite to PostgreSQL and configure Testcontainers This commit completes the first major phase of the Cloud Migration Blueprint by fully replacing the local SQLite database with PostgreSQL. All 219 tests have been updated and are passing successfully. Major changes included: - Replaced SQLite with a local PostgreSQL 16 instance via `docker-compose-postgres-dev.yml` for development. - Integrated Testcontainers into the Gradle build to run integration tests against an isolated, ephemeral PostgreSQL container. - Refactored all repository layers to map database timestamps directly to `LocalDateTime` instead of parsing SQLite strings. - Fixed PostgreSQL-specific SQL grammar issues, including explicitly qualifying table names in `ON CONFLICT` (`UPSERT`) clauses. - Adjusted JDBC `update` methods to correctly capture auto-generated keys in PostgreSQL by explicitly passing the primary key column array (`new String[]{"id"}`). - Adjusted `LocalDateTime.now()` calls in tests to truncate to `MICROS` to match PostgreSQL's timestamp precision. - Removed obsolete manual SQLite connection configurations (`DatabaseConfig.java`, `TestDatabaseConfig.java`) and `BackupServiceIntegrationTest`. - Enforced a strict "Fail-Fast" security pattern in `application.properties`, requiring `JWT_SECRET` and DB credentials to be injected via Environment Variables. - Added `spring-dotenv` dependency to support `.env` files in future deployment phases. - Updated `.cursorrules` to track technical debt regarding Testcontainers named-pipe detection on Windows.