@@ -23,7 +23,7 @@ class DeudoresRepositoryTest extends BaseIntegrationTest {
     private Long createTestSale() {
         Long userId = createTestUser();
         var venta = new com.centralizesys.model.sales.Venta();
-        venta.setFecha(java.time.LocalDate.now().toString());
+        venta.setFecha(java.time.LocalDateTime.now());
         venta.setClienteNombre("Debt Test Client");
         venta.setTotalVenta(1000.00);
         venta.setUsuarioId(userId);
@@ -45,7 +45,7 @@ class DeudoresRepositoryTest extends BaseIntegrationTest {
         assertThat(all.getFirst().getClienteNombre()).isEqualTo("Juan Perez");
         assertThat(all.getFirst().getMontoDeuda()).isEqualTo(500.00);
         assertThat(all.getFirst().getEstado()).isEqualTo("PENDIENTE");
-        assertThat(all.getFirst().getFechaDeuda()).isNotBlank();
+        assertThat(all.getFirst().getFechaDeuda()).isNotNull();
     }
 
     @Test
@@ -185,9 +185,9 @@ class DeudoresRepositoryTest extends BaseIntegrationTest {
         // Debt 2: 20 Days Ago (Expired)
         deudoresRepository.save(ventaId2, "Old Debtor", 200.0);
         // Manually backdate the second debt
-        String oldDate = java.time.LocalDate.now().minusDays(20).toString();
+        java.time.LocalDateTime oldDate = java.time.LocalDateTime.now().minusDays(20);
         // Get ID of the last inserted (Old Debtor)
-        Long oldDebtId = deudoresRepository.findAll().get(0).getId(); // List is ordered DESC, so first is newest (Old
+        Long oldDebtId = deudoresRepository.findAll().getFirst().getId(); // List is ordered DESC, so first is newest (Old
         // Debtor)
 
         jdbcTemplate.update("UPDATE deudores SET fecha_deuda = ? WHERE id = ?", oldDate, oldDebtId);
